<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".WebActivity">
    <item
        android:id="@+id/video_action_reload"
        android:title="@string/action_reload"
        android:orderInCategory="80"
        android:icon="@android:drawable/ic_menu_rotate"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/video_action_share"
        android:title="@string/action_share"
        android:orderInCategory="80"
        android:icon="@android:drawable/ic_menu_share"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/video_action_stop"
        android:title="@string/action_stop"
        android:orderInCategory="80"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        app:showAsAction="ifRoom" />

</menu>