<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:clickable="true"
    android:orientation="vertical"
    android:padding="20.0dip" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/bg_bombbox"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/title_pay"
            style="@style/text_18_ffffff"
            android:layout_width="fill_parent"
            android:layout_height="40.0dip"
            android:gravity="center"
            android:text="@string/title_alert"
            android:visibility="visible" />

        <LinearLayout
            android:id="@+id/content_pay"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/main_white"
            android:gravity="center" >

            <ImageView
                android:id="@+id/code_pay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="1.0dip"
                android:paddingLeft="10.0dip"
                android:paddingRight="10.0dip"
                android:paddingTop="1.0dip"
                android:src="@drawable/pay15"
                android:textColor="@color/main_white"/>
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:background="#ffd0d0d0" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="60.0dip"
            android:layout_gravity="bottom"
            android:background="@drawable/dialog_bottom_bg"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/save_pay"
                style="@style/text_15_ffffff_sdw"
                android:layout_width="100.0dip"
                android:layout_height="40.0dip"
                android:background="@drawable/btn_ok_selector"
                android:layout_gravity="center"
                android:text="@string/action_save"
                android:textColor="@color/main_black"/>

            <Button
                android:id="@+id/positiveButton_pay"
                style="@style/text_15_ffffff_sdw"
                android:layout_width="100.0dip"
                android:layout_height="40.0dip"
                android:layout_marginLeft="10dp"
                android:background="@drawable/btn_ok_selector"
                android:layout_gravity="center"
                android:text="@string/ok_dialog"
                android:textColor="@color/main_black"/>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>